--- a/packages.config
+++ b/packages.config
@@ -1,30 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net48" />
-  <package id="itext7" version="7.2.5" targetFramework="net48" />
-  <package id="itext7.commons" version="7.2.5" targetFramework="net48" />
-  <package id="itext7.pdfsweep" version="3.0.0" targetFramework="net48" />
+  <package id="BouncyCastle.Cryptography" version="2.6.2" targetFramework="net48" />
+  <package id="itext" version="9.5.0" targetFramework="net48" />
+  <package id="itext.bouncy-castle-adapter" version="9.5.0" targetFramework="net48" />
+  <package id="itext.commons" version="9.5.0" targetFramework="net48" />
+  <package id="itext.pdfsweep" version="5.0.5" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.Cryptography" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.4" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="9.0.4" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="PDFium.WindowsV2" version="1.1.4" targetFramework="net48" />
   <package id="PDFiumSharpV2" version="1.1.4" targetFramework="net48" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.4" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Formats.Asn1" version="9.0.4" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net48" />
   <package id="System.Resources.Extensions" version="4.6.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="9.0.4" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
   <package id="TesseractOCR" version="5.5.1" targetFramework="net48" />
 </packages>
