feat(menu): add recent files list for PDF/PAP   - add File menu submenu near Exit   - store last 10 opened files in user settings   - open recent entries and drop invalid ones

--- a/App.config
+++ b/App.config
@@ -88,6 +88,9 @@
       <setting name="LastPapPath" serializeAs="String">
         <value />
       </setting>
+      <setting name="RecentFiles" serializeAs="String">
+        <value />
+      </setting>
       <setting name="LastColorCheckBoxState" serializeAs="String">
         <value>False</value>
       </setting>
