--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -8,6 +8,9 @@
     <Setting Name="LastPapPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="RecentFiles" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
     <Setting Name="LastColorCheckBoxState" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
