fix(rotation): handle base rotation in redaction output   - track reencoded pages and avoid double-applying base rotation   - adjust coordinate conversion for baked rotations in redaction + text   - open diagnostic log after save when enabled   - make diagnostic mode session-only (no user settings persistence)

--- a/App.config
+++ b/App.config
@@ -115,6 +115,9 @@
       <setting name="IgnorePdfRestrictions" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="DiagnosticMode" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="PreferredUICulture" serializeAs="String">
         <value />
       </setting>
