--- a/AnonPDFPro.csproj
+++ b/AnonPDFPro.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{2595CA84-5335-40DC-BD91-E7B1BB9E5A69}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>AnonPDF</RootNamespace>
-    <AssemblyName>AnonPDF</AssemblyName>
+    <AssemblyName>AnonPDFPro</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -204,6 +204,7 @@
     <Compile Include="PDFForm.Designer.cs">
       <DependentUpon>PDFForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Branding.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="PDFForm.resx">
@@ -246,6 +247,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="LICENSE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NOTICE.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="THIRD-PARTY-NOTICES.md">
