feat(ui): add splash screen until first PDF load

--- a/AnonPDFPro.csproj
+++ b/AnonPDFPro.csproj
@@ -204,6 +204,7 @@
     <Compile Include="PDFForm.Designer.cs">
       <DependentUpon>PDFForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SplashForm.cs" />
     <Compile Include="ThemedControls.cs" />
     <Compile Include="Branding.cs" />
     <Compile Include="Program.cs" />
